service/message/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  selector:
    matchLabels:
      app: message-service
  replicas: 1 
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
      - name: message-service
        image: registry.cn-shanghai.aliyuncs.com/niceice/message-service
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: aliyun-credentials-sh
