service/message/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: message
  namespace: app-0
spec:
  #externalTrafficPolicy: Cluster  # default
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: message
  sessionAffinity: None # default
  type: ClusterIP
