service/message/k8s/ingress-route.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: message
  namespace: app-0
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-env0-app0-message
  routes:
    - match: Host(`message.app0.env0.luojm.com`) 
      kind: Rule
      services:
      - name: message
        kind: Service
        port: 80
